[gd_scene load_steps=30 format=2]

[ext_resource path="res://IKAR.tscn" type="PackedScene" id=1]
[ext_resource path="res://WORLD.gd" type="Script" id=2]
[ext_resource path="res://dir_light.png" type="Texture" id=3]
[ext_resource path="res://LABIRINT.png" type="Texture" id=4]
[ext_resource path="res://SEA.png" type="Texture" id=5]
[ext_resource path="res://SNAPPER.gd" type="Script" id=6]
[ext_resource path="res://CLOUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://SLIDER.png" type="Texture" id=8]
[ext_resource path="res://SLIDER_I.png" type="Texture" id=9]
[ext_resource path="res://SKY.png" type="Texture" id=10]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://RELOAD_0.png" type="Texture" id=12]
[ext_resource path="res://RELOAD_1.png" type="Texture" id=13]
[ext_resource path="res://DARK_CLOUD.tscn" type="PackedScene" id=14]
[ext_resource path="res://DEDAL.tscn" type="PackedScene" id=15]
[ext_resource path="res://HOME_0.png" type="Texture" id=16]
[ext_resource path="res://HOME_1.png" type="Texture" id=17]
[ext_resource path="res://song.wav" type="AudioStream" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 264, 16 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 48, 16 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 128, 16 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 72 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 104 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 0, 80, 16, 80, 16, 128, 48, 128, 48, 80, 80, 80, 80, 128, 112, 128, 112, 80, 144, 80, 144, 128, 176, 128, 176, 80, 208, 80, 208, 128, 240, 128, 240, 80, 256, 80, 256, 144, 0, 144 )

[node name="WORLD" type="Node2D"]
script = ExtResource( 2 )

[node name="SKY" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 128, 72 )
texture = ExtResource( 10 )

[node name="LABIRINT" type="Sprite" parent="."]
position = Vector2( 128, 72 )
texture = ExtResource( 4 )

[node name="IKAR" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 120 )

[node name="SEA" type="Sprite" parent="."]
light_mask = 3
position = Vector2( 256, 152 )
texture = ExtResource( 5 )

[node name="DEATH0" type="Area2D" parent="."]
position = Vector2( 384, 160 )
collision_layer = 2
collision_mask = 2

[node name="COLLIDER" type="CollisionShape2D" parent="DEATH0"]
shape = SubResource( 1 )

[node name="DEATH1" type="Area2D" parent="."]
position = Vector2( 264, -16 )
collision_layer = 2
collision_mask = 2

[node name="COLLIDER" type="CollisionShape2D" parent="DEATH1"]
shape = SubResource( 2 )

[node name="SNAPPER" type="Position2D" parent="."]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="SNAPPER"]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 144
smoothing_enabled = true

[node name="Label" type="Label" parent="SNAPPER/Camera2D"]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="SNAPPER/Camera2D"]
light_mask = 0
margin_left = 200.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 24.0
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
min_value = -100.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RELOAD" type="TextureButton" parent="SNAPPER/Camera2D"]
visible = false
light_mask = 2
margin_left = 112.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 80.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS" type="Label" parent="SNAPPER/Camera2D"]
margin_left = 8.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HOME" type="TextureButton" parent="SNAPPER/Camera2D"]
light_mask = 2
margin_left = 120.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 24.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIND" type="AudioStreamPlayer" parent="SNAPPER/Camera2D"]
stream = ExtResource( 19 )
autoplay = true

[node name="LIGHT0" type="Light2D" parent="."]
position = Vector2( 128, -304 )
scale = Vector2( 1, 2 )
texture = ExtResource( 3 )
offset = Vector2( 0, 128 )
energy = 1.5
shadow_enabled = true
shadow_gradient_length = 0.1

[node name="LIGHT1" type="Light2D" parent="."]
position = Vector2( 384, -304 )
scale = Vector2( 1, 2 )
texture = ExtResource( 3 )
offset = Vector2( 0, 128 )
energy = 1.5
shadow_enabled = true
shadow_gradient_length = 0.1

[node name="WALLS" type="Node2D" parent="."]

[node name="FLOOR2" type="StaticBody2D" parent="WALLS"]
position = Vector2( 384, 192 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/FLOOR2"]
shape = SubResource( 8 )

[node name="FLOOR3" type="StaticBody2D" parent="WALLS"]
position = Vector2( 128, 144 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/FLOOR3"]
shape = SubResource( 8 )

[node name="WALL0" type="StaticBody2D" parent="WALLS"]
position = Vector2( 8, 72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/WALL0"]
shape = SubResource( 9 )

[node name="WALL1" type="StaticBody2D" parent="WALLS"]
position = Vector2( 248, 152 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/WALL1"]
shape = SubResource( 9 )

[node name="WALL2" type="StaticBody2D" parent="WALLS"]
position = Vector2( 520, 104 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/WALL2"]
shape = SubResource( 10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 11 )

[node name="DEDAL" parent="." instance=ExtResource( 15 )]
position = Vector2( 56, 120 )

[node name="CLOUD2" parent="." instance=ExtResource( 7 )]
position = Vector2( 384, 64 )

[node name="CLOUD3" parent="." instance=ExtResource( 7 )]
position = Vector2( 296, 40 )

[node name="CLOUD5" parent="." instance=ExtResource( 7 )]
position = Vector2( 96, 32 )

[node name="CLOUD6" parent="." instance=ExtResource( 7 )]
position = Vector2( 24, 48 )

[node name="DARK_CLOUD" parent="." instance=ExtResource( 14 )]
position = Vector2( 192, 48 )

[node name="DARK_CLOUD2" parent="." instance=ExtResource( 14 )]
position = Vector2( 464, 24 )
[connection signal="death" from="IKAR" to="." method="_on_IKAR_death"]
[connection signal="body_entered" from="DEATH0" to="IKAR" method="_on_SEA_body_entered"]
[connection signal="body_entered" from="DEATH1" to="IKAR" method="_on_DEATH1_body_entered"]
[connection signal="button_up" from="SNAPPER/Camera2D/RELOAD" to="." method="_on_RELOAD_button_up"]
[connection signal="button_up" from="SNAPPER/Camera2D/HOME" to="." method="_on_HOME_button_up"]
[connection signal="finished" from="SNAPPER/Camera2D/WIND" to="." method="_on_WIND_finished"]
